Fix control styles for dark mode on TheWoods page

--- a/posts/TheWoods/styles.css
+++ b/posts/TheWoods/styles.css
@@ -9,6 +9,7 @@
   position: relative;
   max-width:100%; 
   height: 75vh;
+  color: black;
 }
 #menu_container {
   position: absolute;
